force-app/main/default/objects/Sender__c/Sender__c.object-meta.xml
<CustomObject>
    <description>Sender details for SwiftShip Tracker</description>
    <label>Sender</label>
    <nameField>
        <label>SenderName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sender's</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>