force-app/main/default/objects/Sender__c/fields/Sende_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sende_Contact__c</fullName>
    <description>To contact the sender</description>
    <label>Sender Contact</label>
    <type>Phone</type>
</CustomField>