force-app/main/default/objects/Sender__c/fields/Sender_Adress__c.field-meta.xml
<CustomField>
    <fullName>Sender_Adress__c</fullName>
    <description>Location in terms of longitude and latitude.</description>
    <label>Sender Address</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>