force-app/main/default/objects/Sender__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sende_Contact__c</columns>
    <columns>Sender_Email__c</columns>
    <columns>Sender_Adress__Latitude__s</columns>
    <columns>Sender_Adress__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>